--- a/intrinsic_gemm_test.ipynb
+++ b/intrinsic_gemm_test.ipynb
@@ -14,18 +14,47 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['_FuncPtr', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattr__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_func_flags_', '_func_restype_', '_handle', '_name']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "intrinsic_gemm_so = ctypes.CDLL('./libintrinsic_gemm.so')\n",
-    "print(dir(intrinsic_gemm_so))"
+    "def gemm_reference(matrix_a, matrix_b, matrix_c, m, n, k):\n",
+    "    for m_idx in range(m):\n",
+    "        for n_idx in range(n):\n",
+    "            for k_idx in range(k):\n",
+    "                matrix_c[m_idx*m+n_idx] += float(matrix_a[m_idx*k+k_idx]) * float(matrix_a[n_idx*k+k_idx]);\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cout_diff(matrix_a, matrix_b, length, loss_rate=1e-4):\n",
+    "    diff_num = 0\n",
+    "    for idx in range(length):\n",
+    "        cur_loss_rate = float(matrix_b[idx] - matrix_a[idx]) / float(length)\n",
+    "        if cur_loss_rate > loss_rate:\n",
+    "            diff_num += 1\n",
+    "    return float(diff_num) / float(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intrinsic_gemm_so = ctypes.CDLL('./libintrinsic_gemm.so')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m, n, k = 100, 100, 100"
    ]
   },
   {
@@ -35,7 +64,7 @@
    "outputs": [],
    "source": [
     "get_instance_func = intrinsic_gemm_so.get_instance\n",
-    "get_instance_func.argtypes = None\n",
+    "get_instance_func.argtypes = (ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
     "get_instance_func.restype = ctypes.c_void_p\n",
     "\n",
     "instance_init_func = intrinsic_gemm_so.instance_init\n",
@@ -43,46 +72,58 @@
     "instance_init_func.restype = ctypes.c_int\n",
     "\n",
     "instance_dispatch_func = intrinsic_gemm_so.instance_dispatch\n",
-    "instance_dispatch_func.argtypes =  (ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_char_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int))\n",
+    "instance_dispatch_func.argtypes =  (ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p)\n",
     "instance_dispatch_func.restype = ctypes.c_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_a = np.arange(0, m*k, 1, dtype=np.int8)\n",
+    "matrix_b = np.arange(0, n*k, 1, dtype=np.int8)\n",
+    "matrix_c = np.zeros(shape=(m*n), dtype=np.int32)\n",
+    "\n",
+    "intrinnsic_gemm_engine = get_instance_func(3, 3, 5)\n",
+    "status = instance_init_func(intrinnsic_gemm_engine, False, False, m, n, k)\n",
+    "status = instance_dispatch_func(intrinnsic_gemm_engine, 1.0, 1.0,\n",
+    "                                matrix_a.ctypes.data_as(ctypes.c_void_p),\n",
+    "                                matrix_b.ctypes.data_as(ctypes.c_void_p),\n",
+    "                                matrix_c.ctypes.data_as(ctypes.c_void_p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_a = np.arange(0, m*k, 1, dtype=np.float)\n",
+    "matrix_b = np.arange(0, n*k, 1, dtype=np.float)\n",
+    "matrix_c_ref = np.zeros(shape=(m*n), dtype=np.float)\n",
+    "gemm_reference(matrix_a, matrix_b, matrix_c_ref, m, n, k)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "m, n, k = 2, 2, 3\n",
-    "matrix_a = np.arange(0, m*k, 1, dtype=np.int8)\n",
-    "matrix_b = np.arange(0, n*k, 1, dtype=np.int8)\n",
-    "matrix_c = np.arange(0, m*n, 1, dtype=np.int32)\n",
-    "\n",
-    "intrinnsic_gemm_engine = get_instance_func()\n",
-    "status = instance_init_func(intrinnsic_gemm_engine, False, False, m, n, k)\n",
-    "status = instance_dispatch_func(intrinnsic_gemm_engine, 1.0, 1.0, matrix_a.ctypes.data_as(ctypes.c_char_p),\n",
-    "                                                                    matrix_b.ctypes.data_as(ctypes.c_char_p), matrix_c.ctypes.data_as(ctypes.POINTER(ctypes.c_int)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "14\n",
-      "14\n",
-      "50\n"
+      "('error_rate:', 0.0)\n"
      ]
     }
    ],
    "source": [
-    "for arg in matrix_c:\n",
-    "    print(arg)"
+    "error_rate = cout_diff(matrix_c_ref, matrix_c, m*n)\n",
+    "print('error_rate:',error_rate)\n",
+    "# for idx in range(m*n):\n",
+    "#     print(idx, matrix_c_ref[idx], matrix_c[idx])"
    ]
   },
   {
@@ -95,21 +136,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
