--- a/intrinsic_gemm_test.ipynb
+++ b/intrinsic_gemm_test.ipynb
@@ -33,7 +33,7 @@
     "def cout_diff(matrix_a, matrix_b, length, loss_rate=1e-4):\n",
     "    diff_num = 0\n",
     "    for idx in range(length):\n",
-    "        cur_loss_rate = float(matrix_b[idx] - matrix_a[idx]) / float(length)\n",
+    "        cur_loss_rate = float(matrix_b[idx] - matrix_a[idx]) / float(matrix_a[idx]+1e-10)\n",
     "        if cur_loss_rate > loss_rate:\n",
     "            diff_num += 1\n",
     "    return float(diff_num) / float(length)"
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('error_rate:', 0.0)\n"
+      "error_rate: 0.0\n"
      ]
     }
    ],
@@ -136,21 +136,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
