--- a/intrinsic_gemm_test.ipynb
+++ b/intrinsic_gemm_test.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import ctypes\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import numba as nb"
    ]
   },
   {
@@ -16,12 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gemm_reference(matrix_a, matrix_b, matrix_c, m, n, k):\n",
-    "    for m_idx in range(m):\n",
-    "        for n_idx in range(n):\n",
-    "            for k_idx in range(k):\n",
-    "                matrix_c[m_idx*m+n_idx] += float(matrix_a[m_idx*k+k_idx]) * float(matrix_a[n_idx*k+k_idx]);\n",
-    "    return None"
+    "intrinsic_gemm_so = ctypes.CDLL('./libintrinsic_gemm.so')"
    ]
   },
   {
@@ -30,12 +26,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cout_diff(matrix_a, matrix_b, length, loss_rate=1e-4):\n",
+    "@nb.jit(nopython=True)\n",
+    "def cout_diff(matrix_a, matrix_b, length, loss_rate=1e-4, debug=False):\n",
     "    diff_num = 0\n",
+    "    zero_offset = 1e-10\n",
     "    for idx in range(length):\n",
-    "        cur_loss_rate = float(matrix_b[idx] - matrix_a[idx]) / float(matrix_a[idx]+1e-10)\n",
+    "        cur_loss_rate = abs(float(matrix_b[idx] - matrix_a[idx])) / (abs(float(matrix_a[idx]))+zero_offset)\n",
     "        if cur_loss_rate > loss_rate:\n",
     "            diff_num += 1\n",
+    "        if debug == True:\n",
+    "            print(idx, matrix_a[idx], matrix_b[idx])\n",
     "    return float(diff_num) / float(length)"
    ]
   },
@@ -45,7 +45,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intrinsic_gemm_so = ctypes.CDLL('./libintrinsic_gemm.so')"
+    "@nb.jit(nopython=True)\n",
+    "def gemm_reference(matrix_a, matrix_b, matrix_c, m, n, k):\n",
+    "    for m_idx in range(m):\n",
+    "        for n_idx in range(n):\n",
+    "            for k_idx in range(k):\n",
+    "                matrix_c[m_idx*n+n_idx] += matrix_a[m_idx*k+k_idx] * matrix_a[n_idx*k+k_idx];\n",
+    "    return None"
    ]
   },
   {
@@ -54,7 +60,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m, n, k = 100, 100, 100"
+    "def intrinsic_gemm_impl(matrix_a, matrix_b, matrix_c, m, n, k):\n",
+    "    get_instance_func = intrinsic_gemm_so.get_instance\n",
+    "    get_instance_func.argtypes = (ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
+    "    get_instance_func.restype = ctypes.c_void_p\n",
+    "\n",
+    "    instance_init_func = intrinsic_gemm_so.instance_init\n",
+    "    instance_init_func.argtypes = (ctypes.c_void_p, ctypes.c_bool, ctypes.c_bool, ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
+    "    instance_init_func.restype = ctypes.c_int\n",
+    "\n",
+    "    instance_dispatch_func = intrinsic_gemm_so.instance_dispatch\n",
+    "    instance_dispatch_func.argtypes =  (ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p)\n",
+    "    instance_dispatch_func.restype = ctypes.c_int\n",
+    "\n",
+    "    intrinnsic_gemm_engine = get_instance_func(3, 3, 5)\n",
+    "    status = instance_init_func(intrinnsic_gemm_engine, False, False, m, n, k)\n",
+    "    status = instance_dispatch_func(intrinnsic_gemm_engine, 1.0, 1.0,\n",
+    "                                    matrix_a.ctypes.data_as(ctypes.c_void_p),\n",
+    "                                    matrix_b.ctypes.data_as(ctypes.c_void_p),\n",
+    "                                    matrix_c.ctypes.data_as(ctypes.c_void_p))\n",
+    "    return None"
    ]
   },
   {
@@ -63,52 +88,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_instance_func = intrinsic_gemm_so.get_instance\n",
-    "get_instance_func.argtypes = (ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
-    "get_instance_func.restype = ctypes.c_void_p\n",
+    "def test(m, n, k, debug=False):\n",
+    "    if debug == True:\n",
+    "        matrix_a = np.ones(m*k, dtype=np.int8)\n",
+    "        matrix_b = np.ones(n*k, dtype=np.int8)\n",
+    "    else:\n",
+    "        matrix_a = np.arange(0, m*k, 1, dtype=np.int8)\n",
+    "        matrix_b = np.arange(0, n*k, 1, dtype=np.int8)\n",
+    "    matrix_c= np.zeros(shape=(m*n), dtype=np.int32)\n",
+    "    matrix_c_ref = np.zeros(shape=(m*n), dtype=np.float)\n",
     "\n",
-    "instance_init_func = intrinsic_gemm_so.instance_init\n",
-    "instance_init_func.argtypes = (ctypes.c_void_p, ctypes.c_bool, ctypes.c_bool, ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
-    "instance_init_func.restype = ctypes.c_int\n",
+    "    intrinsic_gemm_impl(matrix_a, matrix_b, matrix_c, m, n, k)\n",
+    "    gemm_reference(matrix_a.copy().astype(np.float), matrix_b.copy().astype(np.float), matrix_c_ref, m, n, k)\n",
     "\n",
-    "instance_dispatch_func = intrinsic_gemm_so.instance_dispatch\n",
-    "instance_dispatch_func.argtypes =  (ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p)\n",
-    "instance_dispatch_func.restype = ctypes.c_int"
+    "    error_rate = cout_diff(matrix_c_ref, matrix_c, m*n, 1e-4, debug)\n",
+    "    print('error_rate:',error_rate)\n",
+    "    return None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_a = np.arange(0, m*k, 1, dtype=np.int8)\n",
-    "matrix_b = np.arange(0, n*k, 1, dtype=np.int8)\n",
-    "matrix_c = np.zeros(shape=(m*n), dtype=np.int32)\n",
-    "\n",
-    "intrinnsic_gemm_engine = get_instance_func(3, 3, 5)\n",
-    "status = instance_init_func(intrinnsic_gemm_engine, False, False, m, n, k)\n",
-    "status = instance_dispatch_func(intrinnsic_gemm_engine, 1.0, 1.0,\n",
-    "                                matrix_a.ctypes.data_as(ctypes.c_void_p),\n",
-    "                                matrix_b.ctypes.data_as(ctypes.c_void_p),\n",
-    "                                matrix_c.ctypes.data_as(ctypes.c_void_p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_a = np.arange(0, m*k, 1, dtype=np.float)\n",
-    "matrix_b = np.arange(0, n*k, 1, dtype=np.float)\n",
-    "matrix_c_ref = np.zeros(shape=(m*n), dtype=np.float)\n",
-    "gemm_reference(matrix_a, matrix_b, matrix_c_ref, m, n, k)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -120,10 +120,8 @@
     }
    ],
    "source": [
-    "error_rate = cout_diff(matrix_c_ref, matrix_c, m*n)\n",
-    "print('error_rate:',error_rate)\n",
-    "# for idx in range(m*n):\n",
-    "#     print(idx, matrix_c_ref[idx], matrix_c[idx])"
+    "m, n, k = 95, 95, 32768\n",
+    "test(m, n, k, False)"
    ]
   },
   {
