float block1x1_kernel_avx2 passed

--- a/intrinsic_gemm_test.ipynb
+++ b/intrinsic_gemm_test.ipynb
@@ -27,16 +27,17 @@
    "outputs": [],
    "source": [
     "@nb.jit(nopython=True)\n",
-    "def cout_diff(matrix_a, matrix_b, length, loss_rate=1e-4, debug=False):\n",
-    "    diff_num = 0\n",
+    "def cout_error(matrix_a, matrix_b, length, debug=False, loss_rate=1e-4):\n",
+    "    error_num = 0\n",
     "    zero_offset = 1e-10\n",
     "    for idx in range(length):\n",
-    "        cur_loss_rate = abs(float(matrix_b[idx] - matrix_a[idx])) / (abs(float(matrix_a[idx]))+zero_offset)\n",
+    "        cur_loss_rate = abs(float(matrix_b[idx] - matrix_a[idx])) \\\n",
+    "                      / (abs(float(matrix_a[idx]))+zero_offset)\n",
     "        if cur_loss_rate > loss_rate:\n",
-    "            diff_num += 1\n",
+    "            error_num += 1\n",
     "        if debug == True:\n",
     "            print(idx, matrix_a[idx], matrix_b[idx])\n",
-    "    return float(diff_num) / float(length)"
+    "    return error_num"
    ]
   },
   {
@@ -50,7 +51,7 @@
     "    for m_idx in range(m):\n",
     "        for n_idx in range(n):\n",
     "            for k_idx in range(k):\n",
-    "                matrix_c[m_idx*n+n_idx] += matrix_a[m_idx*k+k_idx] * matrix_a[n_idx*k+k_idx];\n",
+    "                matrix_c[m_idx*n+n_idx] += matrix_a[m_idx*k+k_idx] * matrix_b[n_idx*k+k_idx];\n",
     "    return None"
    ]
   },
@@ -60,26 +61,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def intrinsic_gemm_impl(matrix_a, matrix_b, matrix_c, m, n, k):\n",
+    "def intrinsic_gemm_impl(matrix_a, matrix_b, matrix_c, m, n, k, type_a, type_b, type_c):\n",
+    "    type_dict = {\"<class 'numpy.float32'>\": 1,\n",
+    "                 \"<class 'numpy.int8'>\": 3,\n",
+    "                 \"<class 'numpy.int32'>\": 5,\n",
+    "                 \"<class 'numpy.uint8'>\": 7}\n",
+    "\n",
     "    get_instance_func = intrinsic_gemm_so.get_instance\n",
     "    get_instance_func.argtypes = (ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
     "    get_instance_func.restype = ctypes.c_void_p\n",
     "\n",
     "    instance_init_func = intrinsic_gemm_so.instance_init\n",
-    "    instance_init_func.argtypes = (ctypes.c_void_p, ctypes.c_bool, ctypes.c_bool, ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
+    "    instance_init_func.argtypes = (ctypes.c_void_p, ctypes.c_bool, ctypes.c_bool,\n",
+    "                                   ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
     "    instance_init_func.restype = ctypes.c_int\n",
     "\n",
     "    instance_dispatch_func = intrinsic_gemm_so.instance_dispatch\n",
-    "    instance_dispatch_func.argtypes =  (ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p)\n",
+    "    instance_dispatch_func.argtypes = (ctypes.c_void_p, ctypes.c_float, ctypes.c_float,\n",
+    "                                       ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p)\n",
     "    instance_dispatch_func.restype = ctypes.c_int\n",
     "\n",
-    "    intrinnsic_gemm_engine = get_instance_func(3, 3, 5)\n",
+    "    intrinnsic_gemm_engine = get_instance_func(type_dict[str(type_a)], type_dict[str(type_b)], type_dict[str(type_c)])\n",
     "    status = instance_init_func(intrinnsic_gemm_engine, False, False, m, n, k)\n",
     "    status = instance_dispatch_func(intrinnsic_gemm_engine, 1.0, 1.0,\n",
     "                                    matrix_a.ctypes.data_as(ctypes.c_void_p),\n",
     "                                    matrix_b.ctypes.data_as(ctypes.c_void_p),\n",
     "                                    matrix_c.ctypes.data_as(ctypes.c_void_p))\n",
-    "    return None"
+    "    return status"
    ]
   },
   {
@@ -88,22 +96,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(m, n, k, debug=False):\n",
+    "def test_error_num(m, n, k, a_type, b_type, c_type, debug=False, loss_rate=1e-4):\n",
     "    if debug == True:\n",
-    "        matrix_a = np.ones(m*k, dtype=np.int8)\n",
-    "        matrix_b = np.ones(n*k, dtype=np.int8)\n",
+    "        matrix_a = np.ones(m*k, dtype=a_type)\n",
+    "        matrix_b = np.ones(n*k, dtype=b_type)\n",
     "    else:\n",
-    "        matrix_a = np.arange(0, m*k, 1, dtype=np.int8)\n",
-    "        matrix_b = np.arange(0, n*k, 1, dtype=np.int8)\n",
-    "    matrix_c= np.zeros(shape=(m*n), dtype=np.int32)\n",
+    "        matrix_a = np.arange(0, m*k, 1, dtype=a_type)\n",
+    "        matrix_b = np.arange(0, n*k, 1, dtype=b_type)\n",
+    "    matrix_c= np.zeros(shape=(m*n), dtype=c_type)\n",
     "    matrix_c_ref = np.zeros(shape=(m*n), dtype=np.float)\n",
     "\n",
-    "    intrinsic_gemm_impl(matrix_a, matrix_b, matrix_c, m, n, k)\n",
+    "    intrinsic_gemm_impl(matrix_a, matrix_b, matrix_c, m, n, k, a_type, b_type, c_type)\n",
     "    gemm_reference(matrix_a.copy().astype(np.float), matrix_b.copy().astype(np.float), matrix_c_ref, m, n, k)\n",
     "\n",
-    "    error_rate = cout_diff(matrix_c_ref, matrix_c, m*n, 1e-4, debug)\n",
-    "    print('error_rate:',error_rate)\n",
-    "    return None"
+    "    error_num = cout_error(matrix_c_ref, matrix_c, m*n, debug, loss_rate)\n",
+    "    return error_num"
    ]
   },
   {
@@ -115,13 +122,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error_rate: 0.0\n"
+      "s8s8s32, error_num: 0\n",
+      "f32f32f32, error_num: 0\n"
      ]
     }
    ],
    "source": [
-    "m, n, k = 95, 95, 32768\n",
-    "test(m, n, k, False)"
+    "m, n, k = 47, 47, 32768\n",
+    "error_num = test_error_num(m, n, k, np.int8, np.int8, np.int32, False)\n",
+    "print('s8s8s32, error_num:', error_num)\n",
+    "m, n, k = 47, 47, 32768\n",
+    "error_num = test_error_num(m, n, k, np.float32, np.float32, np.float32, False)\n",
+    "print('f32f32f32, error_num:', error_num)"
    ]
   },
   {
