--- a/gemm_test.ipynb
+++ b/gemm_test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intrinsic_gemm_so = ctypes.CDLL('./libintrinsic_gemm.so')"
+    "gemm_intrinsic_so = ctypes.CDLL('./libgemm_intrinsic.so')"
    ]
   },
   {
@@ -61,22 +61,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def intrinsic_gemm_impl(matrix_a, matrix_b, matrix_c, m, n, k, type_a, type_b, type_c):\n",
+    "def gemm_intrinsic_impl(matrix_a, matrix_b, matrix_c, m, n, k, type_a, type_b, type_c):\n",
     "    type_dict = {\"<class 'numpy.float32'>\": 1,\n",
     "                 \"<class 'numpy.int8'>\": 3,\n",
     "                 \"<class 'numpy.int32'>\": 5,\n",
     "                 \"<class 'numpy.uint8'>\": 7}\n",
     "\n",
-    "    get_instance_func = intrinsic_gemm_so.get_instance\n",
+    "    get_instance_func = gemm_intrinsic_so.get_instance\n",
     "    get_instance_func.argtypes = (ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
     "    get_instance_func.restype = ctypes.c_void_p\n",
     "\n",
-    "    instance_init_func = intrinsic_gemm_so.instance_init\n",
+    "    instance_init_func = gemm_intrinsic_so.instance_init\n",
     "    instance_init_func.argtypes = (ctypes.c_void_p, ctypes.c_bool, ctypes.c_bool,\n",
     "                                   ctypes.c_int, ctypes.c_int, ctypes.c_int)\n",
     "    instance_init_func.restype = ctypes.c_int\n",
     "\n",
-    "    instance_dispatch_func = intrinsic_gemm_so.instance_dispatch\n",
+    "    instance_dispatch_func = gemm_intrinsic_so.instance_dispatch\n",
     "    instance_dispatch_func.argtypes = (ctypes.c_void_p, ctypes.c_float, ctypes.c_float,\n",
     "                                       ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p)\n",
     "    instance_dispatch_func.restype = ctypes.c_int\n",
@@ -106,7 +106,7 @@
     "    matrix_c= np.zeros(shape=(m*n), dtype=c_type)\n",
     "    matrix_c_ref = np.zeros(shape=(m*n), dtype=np.float)\n",
     "\n",
-    "    intrinsic_gemm_impl(matrix_a, matrix_b, matrix_c, m, n, k, a_type, b_type, c_type)\n",
+    "    gemm_intrinsic_impl(matrix_a, matrix_b, matrix_c, m, n, k, a_type, b_type, c_type)\n",
     "    gemm_reference(matrix_a.copy().astype(np.float), matrix_b.copy().astype(np.float), matrix_c_ref, m, n, k)\n",
     "\n",
     "    error_num = cout_error(matrix_c_ref, matrix_c, m*n, debug, loss_rate)\n",
